chatbot now working with js

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fastify-static": "^4.2.3",
     "http": "0.0.1-security",
     "isomorphic-ws": "^4.0.1",
+    "node-nlp": "^4.22.8",
     "path": "^0.12.7",
     "point-of-view": "^4.15.2",
     "pug": "^3.0.2",
